--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,5 @@
 cvzone==1.6.1
-numpy==1.26.0
+numpy==1.26.1
 opencv_contrib_python==4.8.1.78
 opencv_python==4.8.1.78
-rel==0.4.9
-websocket_client==1.6.4
+websockets==11.0.3
