--- a/settings.conf
+++ b/settings.conf
@@ -1,5 +1,5 @@
 python_path=src/python/main.py
 venv_path=venv
 mqtt_docker_name=vibrant_edison
-node_red_path=src/node-red/NodeRedCamera.json
+node_red_path=src/node-red
 command_delay=1000
